fixed spacing

--- a/src/components/Asset/AssetContent/index.module.css
+++ b/src/components/Asset/AssetContent/index.module.css
@@ -26,7 +26,6 @@
   align-items: baseline;
   align-content: bottom;
   height: 40px;
-  margin-top: 10px;
 }
 
 @media (min-width: 60rem) {
